// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/system_user_detail/team_list/TeamList should match snapshot when no teams are found 1`] = `
<AbstractList
  actions={
    Object {
      "getTeamMembersForUser": [MockFunction],
      "getTeamsData": [MockFunction] {
        "calls": Array [
          Array [
            "1234",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  data={Array []}
  emptyListTextDefaultMessage="No teams found"
  emptyListTextId="emptyListTextId"
  header={<Header />}
  renderRow={[Function]}
  total={0}
  userId="1234"
/>
`;

exports[`admin_console/system_user_detail/team_list/TeamList should match snapshot with teams populated 1`] = `
<AbstractList
  actions={
    Object {
      "getTeamMembersForUser": [MockFunction],
      "getTeamsData": [MockFunction] {
        "calls": Array [
          Array [
            "1234",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  data={
    Array [
      Object {
        "description": "Team 1 description",
        "display_name": "Team 1",
        "id": "id1",
      },
      Object {
        "description": "The 2 description",
        "display_name": "Team 2",
        "id": "id2",
      },
    ]
  }
  emptyListTextDefaultMessage="No teams found"
  emptyListTextId="emptyListTextId"
  header={<Header />}
  renderRow={[Function]}
  total={2}
  userId="1234"
/>
`;
